cropper css fix

--- a/css/blocks/elements.less
+++ b/css/blocks/elements.less
@@ -511,3 +511,40 @@ i.icon-file {
     }
   }
 }
+
+.preview1 {
+  text-align: center;
+  overflow: hidden;
+  width: 160px;
+  height: 160px;
+  margin: 10px;
+  border: 1px solid @secondary-patidar;
+  @media @breakpoint-tablet {
+    width: 130px;
+    height: 130px;
+  }
+}
+.preview2 {
+  text-align: center;
+  overflow: hidden;
+  width: 160px;
+  height: 160px;
+  margin: 10px;
+  border: 1px solid @secondary-patidar;
+  @media @breakpoint-tablet {
+    width: 130px;
+    height: 130px;
+  }
+}
+.preview {
+  text-align: center;
+  overflow: hidden;
+  width: 160px;
+  height: 160px;
+  margin: 10px;
+  border: 1px solid @secondary-patidar;
+  @media @breakpoint-tablet {
+    width: 130px;
+    height: 130px;
+  }
+}
